@@ -166,9 +166,6 @@ $queries->test({
         # one for tag 3 of 'existing DVD'
         # two for tags 2 and 3 of 'new DVD'
         insert => 3,
-        # one for the find of existing tag 3 of 'existing DVD'
-        # two for the find of the two existing tags of 'new DVD'
-        select => 3,
         # this is the cleanup query which deletes all tags of a dvd not
         # passed to tags, in this case the 'crime' tag created above
         delete => 1,
